--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,17 @@
     tools:context="com.example.matt.mkluk_countbook.MainActivity">
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/add"
         android:layout_width="0dp"
         android:layout_height="61dp"
-        android:text="@string/addCounter"
-        android:layout_marginRight="24dp"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="24dp"
         android:layout_marginLeft="24dp"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="24dp"
+        android:text="@string/addCounter"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="24dp" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp" />
+
 </android.support.constraint.ConstraintLayout>
