--- a/app/src/main/res/layout/activity_add_counter.xml
+++ b/app/src/main/res/layout/activity_add_counter.xml
@@ -50,26 +50,24 @@
         android:id="@+id/nameMsg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/nameMsg"
         app:layout_constraintLeft_toRightOf="@+id/textView3"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="16dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/initMsg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="38dp"
+        android:digits="0123456789"
         android:ems="10"
         android:inputType="number"
-        android:digits="0123456789"
-        android:text="@string/initMsg"
-        android:layout_marginTop="38dp"
-        app:layout_constraintTop_toBottomOf="@+id/nameMsg"
+        app:layout_constraintLeft_toRightOf="@+id/textView4"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/nameMsg" />
 
     <TextView
         android:id="@+id/textView4"
@@ -89,7 +87,6 @@
         android:layout_marginTop="49dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/commentMsg"
         app:layout_constraintLeft_toRightOf="@+id/textView7"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/initMsg" />
