Countbook is functional

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context="com.example.matt.mkluk_countbook.MainActivity">
 
     <Button
-        android:id="@+id/add"
+        android:id="@+id/plus"
         android:layout_width="0dp"
         android:layout_height="61dp"
         android:layout_marginBottom="24dp"
